@@ -581,9 +581,6 @@ void qjackctlSessionForm::keyPressEvent ( QKeyEvent *pKeyEvent )
 		QWidget::keyPressEvent(pKeyEvent);
 		break;
 	}
-
-	// Make sure we've get focus back...
-	QWidget::setFocus();
 }
 
 
